--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -1,94 +1,94 @@
 {
-   "name": "rnproject",
-   "version": "0.0.1",
-   "private": true,
-   "authors": [
-      {
-         "email": "akkyjumbade@gmail.com",
-         "name": "Akshay Jumbade",
-         "url": "https://github.com/akkyjumbade"
-      }
-   ],
-   "scripts": {
-      "android": "react-native run-android",
-      "ios": "react-native run-ios",
-      "start": "react-native start",
-      "test": "jest",
-      "lint": "eslint .",
-      "podinstall": "cd ios && pod install && cd ..",
-      "format": "prettier --write \"./src/**/*.{js,md,yml}\"",
-      "create:logo": "react-native generate-bootsplash './assets/logo/logo@1080x1080.png'",
-      "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
-      "bundle:ios": "react-native bundle --dev false --entry-file index.js --bundle-output ios/main.jsbundle --platform ios --assets-dest ios",
-      "clean:npm": "watchman watch-del-all && rm -rf package-lock.json && rm -rf node_modules && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && npm install --force && say Project has been cleaned successfully",
-      "clean": "watchman watch-del-all && rm -rf yarn.lock && rm -rf node_modules && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && yarn install && say Project has been cleaned successfully"
-   },
-   "dependencies": {
-      "@react-native-async-storage/async-storage": "1.15.*",
-      "@react-native-community/clipboard": "1.5.*",
-      "@react-native-community/netinfo": "6.0.*",
-      "@react-native-community/push-notification-ios": "1.10.*",
-      "@react-navigation/bottom-tabs": "6.0.*",
-      "@react-navigation/native": "6.0.*",
-      "@react-navigation/stack": "6.0.*",
-      "@sentry/react-native": "3.2.*",
-      "@twotalltotems/react-native-otp-input": "1.3.*",
-      "axios": "0.24.*",
-      "formik": "2.2.*",
-      "i18next": "21.3.*",
-      "lodash": "4.17.*",
-      "lottie-ios": "3.2.*",
-      "lottie-react-native": "5.0.*",
-      "native-base": "3.2.*",
-      "prop-types": "15.7.*",
-      "react": "17.0.*",
-      "react-content-loader": "6.1.*",
-      "react-i18next": "11.13.*",
-      "react-native": "0.66.*",
-      "react-native-app-intro-slider": "4.0.*",
-      "react-native-bootsplash": "3.2.*",
-      "react-native-device-info": "8.4.8",
-      "react-native-document-picker": "7.1.*",
-      "react-native-gesture-handler": "1.10.*",
-      "react-native-keychain": "^8.0.0",
-      "react-native-localize": "2.1.*",
-      "react-native-maps": "0.30.1",
-      "react-native-modalize": "2.0.*",
-      "react-native-modern-datepicker": "^1.0.0-beta.91",
-      "react-native-offline": "6.0.*",
-      "react-native-pager-view": "5.4.*",
-      "react-native-permissions": "3.2.0",
-      "react-native-portalize": "1.0.*",
-      "react-native-push-notification": "8.1.*",
-      "react-native-safe-area-context": "3.3.*",
-      "react-native-screens": "3.9.*",
-      "react-native-storage": "1.0.*",
-      "react-native-svg": "12.1.*",
-      "react-native-swipe-list-view": "3.2.*",
-      "react-native-touch-id": "^4.4.1",
-      "react-native-vector-icons": "9.0.*",
-      "react-native-webview": "11.15.*",
-      "react-query": "3.31.*",
-      "react-redux": "7.2.*",
-      "redux": "4.1.*",
-      "redux-persist": "6.0.*",
-      "redux-thunk": "2.4.*",
-      "styled-components": "5.3.*",
-      "yup": "0.32.*"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.12.9",
-      "@babel/runtime": "^7.12.5",
-      "@react-native-community/eslint-config": "^2.0.0",
-      "babel-jest": "^26.6.3",
-      "babel-plugin-module-resolver": "^4.1.0",
-      "eslint": "7.14.0",
-      "jest": "^26.6.3",
-      "metro-react-native-babel-preset": "^0.66.2",
-      "react-test-renderer": "17.0.2",
-      "redux-devtools-extension": "^2.13.9"
-   },
-   "jest": {
-      "preset": "react-native"
-   }
+  "name": "rnproject",
+  "version": "0.0.1",
+  "private": true,
+  "authors": [
+    {
+      "email": "akkyjumbade@gmail.com",
+      "name": "Akshay Jumbade",
+      "url": "https://github.com/akkyjumbade"
+    }
+  ],
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint .",
+    "podinstall": "cd ios && pod install && cd ..",
+    "format": "prettier --write \"./src/**/*.{js,md,yml}\"",
+    "create:logo": "react-native generate-bootsplash './assets/logo/logo@1080x1080.png'",
+    "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
+    "bundle:ios": "react-native bundle --dev false --entry-file index.js --bundle-output ios/main.jsbundle --platform ios --assets-dest ios",
+    "clean:npm": "watchman watch-del-all && rm -rf package-lock.json && rm -rf node_modules && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && npm install --force && say Project has been cleaned successfully",
+    "clean": "watchman watch-del-all && rm -rf yarn.lock && rm -rf node_modules && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && yarn install && say Project has been cleaned successfully"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "1.15.*",
+    "@react-native-community/clipboard": "1.5.*",
+    "@react-native-community/netinfo": "6.0.*",
+    "@react-native-community/push-notification-ios": "1.10.*",
+    "@react-navigation/bottom-tabs": "6.0.*",
+    "@react-navigation/native": "6.0.*",
+    "@react-navigation/stack": "6.0.*",
+    "@sentry/react-native": "3.2.*",
+    "@twotalltotems/react-native-otp-input": "1.3.*",
+    "axios": "0.24.*",
+    "formik": "^2.2.9",
+    "i18next": "21.3.*",
+    "lodash": "^4.17.21",
+    "lottie-ios": "3.2.*",
+    "lottie-react-native": "5.0.*",
+    "native-base": "3.2.*",
+    "prop-types": "15.7.*",
+    "react": "17.0.*",
+    "react-content-loader": "6.1.*",
+    "react-i18next": "11.13.*",
+    "react-native": "0.66.*",
+    "react-native-app-intro-slider": "4.0.*",
+    "react-native-bootsplash": "3.2.*",
+    "react-native-device-info": "8.4.8",
+    "react-native-document-picker": "7.1.*",
+    "react-native-gesture-handler": "1.10.*",
+    "react-native-keychain": "^8.0.0",
+    "react-native-localize": "2.1.*",
+    "react-native-maps": "0.30.1",
+    "react-native-modalize": "2.0.*",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-offline": "6.0.*",
+    "react-native-pager-view": "5.4.*",
+    "react-native-permissions": "3.2.0",
+    "react-native-portalize": "1.0.*",
+    "react-native-push-notification": "8.1.*",
+    "react-native-safe-area-context": "3.3.*",
+    "react-native-screens": "3.9.*",
+    "react-native-storage": "1.0.*",
+    "react-native-svg": "12.1.*",
+    "react-native-swipe-list-view": "3.2.*",
+    "react-native-touch-id": "^4.4.1",
+    "react-native-vector-icons": "9.0.*",
+    "react-native-webview": "11.15.*",
+    "react-query": "3.31.*",
+    "react-redux": "7.2.*",
+    "redux": "4.1.*",
+    "redux-persist": "6.0.*",
+    "redux-thunk": "2.4.*",
+    "styled-components": "5.3.*",
+    "yup": "0.32.*"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2",
+    "redux-devtools-extension": "^2.13.9"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
